Crashes with background scenes #53164

Closed
opened 2017-10-25 22:18:56 +02:00 by Dalai Felinto · 8 comments

Blender Version
Broken: 86899c1adf
Worked: ???

Short description of error
Crash when saving and re-opening files with background set.

Exact steps for others to reproduce the error

  • Create a file with two scenes, go to the main one, and set the second one as background.
  • Save and re-open.

Or open: pre-set.blend

  • Go to scene panel and set the "Scene" as background for the current scene (Scene.001)

Full crash: P548
This is a crash inside an assert because base->collection_properties is NULL for the background scene until you "visit" the scene once.

**Blender Version** Broken: 86899c1adf Worked: ??? **Short description of error** Crash when saving and re-opening files with background set. **Exact steps for others to reproduce the error** * Create a file with two scenes, go to the main one, and set the second one as background. * Save and re-open. Or open: [pre-set.blend](https://archive.blender.org/developer/F1066235/pre-set.blend) * Go to scene panel and set the "Scene" as background for the current scene (Scene.001) Full crash: [P548](https://archive.blender.org/developer/P548.txt) This is a crash inside an assert because `base->collection_properties` is NULL for the background scene until you "visit" the scene once.
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Added subscriber: @Sergey
Removed subscriber: @dfelinto

Added subscriber: @Sergey Removed subscriber: @dfelinto
Sergey Sharybin was assigned by Dalai Felinto 2017-10-25 22:40:26 +02:00
Author
Owner

Added subscriber: @dfelinto
Removed subscriber: @Sergey

Added subscriber: @dfelinto Removed subscriber: @Sergey
Author
Owner

@Sergey I found the problem:
BKE_layer_eval_layer_collection_post() is never called for the background set scene layers.

And since we don't store evaluated data (e.g., base->collection_properties) in the .blend file, the data is never there when we need it.

@Sergey I found the problem: `BKE_layer_eval_layer_collection_post()` is never called for the background set scene layers. And since we don't store evaluated data (e.g., base->collection_properties) in the `.blend` file, the data is never there when we need it.
Author
Owner

To simplify debugging I recommend a file with the background scene already set: set.blend

And if you want to prevent the crash while debugging: P549

To simplify debugging I recommend a file with the background scene already set: [set.blend](https://archive.blender.org/developer/F1066324/set.blend) And if you want to prevent the crash while debugging: [P549](https://archive.blender.org/developer/P549.txt)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Committed workaround. Please keep in mind, this is a subject of reworking at this moment. So rather not accept any bugs about this before everything is implemented according to a design.

Committed workaround. Please keep in mind, this is a subject of reworking at this moment. So rather not accept any bugs about this before everything is implemented according to a design.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53164
No description provided.