Fix / workaround T53164: Crashes with background scenes

Simple workaround in on_visible_update(). There might be more missing updates or tags.